--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^6.0.0",
     "bootstrap": "^5.3.6",
     "crypto-js": "^4.2.0",
+    "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "pg": "^8.16.0",
     "react": "^19.0.0",
