--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.0",
     "bcrypt": "^6.0.0",
     "bootstrap": "^5.3.6",
     "crypto-js": "^4.2.0",
